--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>This is a test of building a github page</h1>
+<!doctype html>
+<html>
+  <head>
+    <title>This is the title of the webpage!</title>
+  </head>
+  <body>
+    <p>This is an test of this. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+  </body>
+</html>
