Small addition to h1

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>Hello Coursera - TB</title>
 </head>
 <body>
-<h1> This is header 1 </h1>
+<h1> This is header 1 - Now you know where h1 goes</h1>
 </body>
 </html>
