--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Hello Coursera - TB</title>
 </head>
 <body>
-<h1> This is header 1 - Now you know where h1 goes</h1>
+<h1> This is header 1 test - asdfasdf</h1>
 </body>
 </html>
